--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@prisma/client": "^5.18.0",
     "@types/node": "^22.5.0",
     "graphql": "^16.9.0",
+    "prisma": "^5.18.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   },
