--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
     "@apollo/server": "^4.11.0",
     "@prisma/client": "^5.18.0",
     "@types/node": "^22.5.0",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.18.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
@@ -12,6 +14,8 @@
     "dev": "nodemon --watch './**/*.ts' --exec ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "nodemon": "^3.1.4"
   }
 }
