--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "@prisma/client": "^5.18.0",
     "@types/node": "^22.5.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.18.0",
